# serial

devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/Serial/: open
devel/lib/pkgconfig/: Serial.pc
devel/share/Serial/cmake/: SerialConfig.cmake
src/Serial/: CMakeLists.txt  package.xml  serial.hpp
src/Serial/src/: serial.cpp
